# poetry-practice

./: README.md  pyproject.toml
poetry_practice/: __init__.py
tests/: test_poetry_practice.py
