[tool.poetry]
name = "poetry_practice"
version = "0.1.0"
description = ""
authors = ["sijinkim <tlwlsdi0306@gmail.com>"]

packages = [
    { include = "poetry_practice" }
]

[tool.poetry.scripts]
poetry_practice = "poetry_practice.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
